# wse

./: Cargo.toml  LICENSE  README.md
Formula/: wse.rb
pages/: 404.html  mime.html  not-get.html
src/: html_response_files.rs  main.rs  response_files.rs
