[package]
name = "wse"
version = "0.1.0"
edition = "2021"
authors = ["Ermolaev Ilya"]
description = "Simple web-server. Exec wse in directory and all files are distributed on localhost"
repository = "https://github.com/ErmolaevID/wse"
license = "MIT"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
mime = "0.3.17"
mime_guess = "2.0.4"
regex = "1.9.1"
walkdir = "2.3.3"
